--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,12 @@ dependencies {
     implementation('com.squareup.retrofit2:retrofit:2.0.0-beta4') {
         exclude module: 'okhttp'
     }
-    implementation 'com.squareup.okhttp3:okhttp:3.2.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+    implementation "com.squareup.okhttp3:okhttp:4.2.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.2.1"
+    implementation "com.squareup.okhttp3:okhttp-urlconnection:4.2.1"
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
 
-implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.squareup.retrofit2:converter-gson:<latest-version>'
