First time picker

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.taghvim"></activity>
+        <activity android:name=".activity.time_picker"></activity>
+        <activity android:name=".activity.taghvim" />
         <activity android:name=".activity.percent" />
         <activity android:name=".activity.last_exam" />
         <activity android:name=".activity.login" />
