--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.last_edite"></activity>
+        <activity android:name=".activity.patern"/>
+
         <activity android:name=".activity.time_picker" />
         <activity android:name=".activity.taghvim" />
         <activity android:name=".activity.percent" />
@@ -31,7 +32,8 @@
         <activity android:name=".activity.reshte" />
         <activity android:name=".activity.first_page" />
         <activity android:name=".activity.sabt_nam" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".activity.last_edite" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
